<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/teal_200">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/game_remainingTime"
        android:text="@string/game_remainingTime"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:visibility="invisible"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/game_gridLayout_id"
        android:layout_centerInParent="true"
        android:visibility="invisible">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="0"
            android:layout_column="0"
            android:id="@+id/game_1stImage"
            android:scaleType="fitXY"
            android:layout_margin="5dp"
            android:onClick="increaseScore"/>

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="0"
            android:layout_column="1"
            android:id="@+id/game_2ndImage"
            android:scaleType="fitXY"
            android:layout_margin="5dp"
            android:onClick="increaseScore"/>

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="0"
            android:layout_column="2"
            android:id="@+id/game_3rdImage"
            android:scaleType="fitXY"
            android:layout_margin="5dp"
            android:onClick="increaseScore"/>

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="1"
            android:layout_column="0"
            android:id="@+id/game_4thImage"
            android:scaleType="fitXY"
            android:layout_margin="5dp"
            android:onClick="increaseScore"/>

        <ImageView
            android:id="@+id/game_5thImage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="5dp"
            android:onClick="increaseScore"
            android:scaleType="fitXY"/>
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="1"
            android:layout_column="2"
            android:id="@+id/game_6thImage"
            android:scaleType="fitXY"
            android:layout_margin="5dp"
            android:onClick="increaseScore"/>

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="2"
            android:layout_column="0"
            android:id="@+id/game_7thImage"
            android:scaleType="fitXY"
            android:layout_margin="5dp"
            android:onClick="increaseScore"/>

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="2"
            android:layout_column="1"
            android:id="@+id/game_8thImage"
            android:scaleType="fitXY"
            android:layout_margin="5dp"
            android:onClick="increaseScore"
            />

        <ImageView
            android:id="@+id/game_9thImage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_margin="5dp"
            android:scaleType="fitXY"
            android:onClick="increaseScore"/>


    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/game_score"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:text="@string/game_score"
        android:visibility="invisible"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/game_startingTime"
        android:textSize="100sp"
        android:textColor="@color/white"
        android:text="@string/game_startingTime"
        android:layout_centerInParent="true" />


</RelativeLayout>